--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "flvr": "lib/index.js"
   },
   "dependencies": {
-    "cardinal": "^1.0.0",
     "chalk": "^1.1.3",
     "figures": "^2.0.0",
+    "highlight-es": "^1.0.0",
     "lodash": "^4.15.0",
     "stack-utils": "^0.4.0",
     "strip-ansi": "^3.0.1"
