--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
+    "codeframe": "0.0.1",
     "figures": "^2.0.0",
-    "highlight-es": "^1.0.0",
     "lodash": "^4.15.0",
     "stack-utils": "^0.4.0",
     "strip-ansi": "^3.0.1"
