--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chalk": "^1.1.3",
     "codeframe": "0.0.1",
     "figures": "^2.0.0",
+    "indent-string": "^3.0.0",
     "lodash": "^4.15.0",
     "stack-utils": "^0.4.0",
     "strip-ansi": "^3.0.1"
