--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "figures": "^2.0.0",
     "indent-string": "^3.0.0",
     "lodash": "^4.15.0",
+    "stack-chain": "^1.3.7",
     "stack-utils": "^0.4.0",
     "strip-ansi": "^3.0.1"
   },
