--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "codeframe": "0.0.1",
     "figures": "^2.0.0",
     "indent-string": "^3.0.0",
+    "load-plugins": "^2.1.1",
     "lodash": "^4.15.0",
     "stack-chain": "^1.3.7",
     "stack-utils": "^0.4.0",
