--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "inspect-process": "^0.3.0",
     "mocha": "^3.1.2",
     "nyc": "^10.0.0"
+  },
+  "standard": {
+    "ignore": ["test/fixtures/syntax.js"]
   }
 }
